--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
 
-  <body id="b">
+  <body>
     <div id="asdf">
       <img src="Spy (1).png" />
       <h1 id="name">
