it will work now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div id="asdf">
+    <div id="header">
       <img src="Spy (1).png" />
       <h1 id="name">
         The Boss 
