--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Back to Top
       </h5>
     </div>
-      <div id="1"><h1>cool stuff</h1></div>
+      <div id="one"><h1>cool stuff</h1></div>
 
   </body>
 
