magic div finished

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
         The Boss 
       </h1>
       <h5 id="button">
-        Back to Top
+      <a href="#header">Back to Top</a>
       </h5>
     </div>
-      <div id="one"><h1>cool stuff</h1></div>
-
-  </body>
-
+      <div id="one">
+         <a href="Magic the Gathering.html"> <h2  class="clicko">Magic the Gathering</h2></a>
+          <a href="Magic the Gathering.html">
+              <img src="it.jpg" class="click"> </a>
+           <a href="Magic the Gathering.html"><h4 class="clicko">Eldritch Moon</h4></a>
+          <a href="Magic the Gathering.html"><img src="atp.jpg" class="click"></a>
+          <a href="Magic the Gathering.html"><h4 class="clicko">Shadows Over Innistrad</h4></a>
+      <a href="Magic the gathering.html"><img src="ed.jpg" class="click"></a>
+              <a href="Magic the Gathering.html"><h4 class="clicko">Oath to the Gatewatch</h4></a>
+           <a href="Magic the gathering.html"><img src="gn.jpg" class="click"></a>
+              <a href="Magic the Gathering.html"><h4 class="clicko">Battle for Zendikar</h4></a>
+          
+      </div>
+     </body>
 </html>
