--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
               <a href="Magic the Gathering.html"><h4 class="clicko">Oath to the Gatewatch</h4></a>
            <a href="Magic the gathering.html"><img src="gn.jpg" class="click"></a>
               <a href="Magic the Gathering.html"><h4 class="clicko">Battle for Zendikar</h4></a>
-          
+          </div>
+      <div id="two">
+      blablablablablablba
       </div>
      </body>
 </html>
