--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="Magic the Gathering.html"><h4 class="clicko">Battle for Zendikar</h4></a>
           </div>
       <div id="two">
-      blablablablablablba
+    <a href="about.html"><h1>About</h1></a>
       </div>
      </body>
 </html>
