--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
               <a href="Magic the Gathering.html"><h4 class="clicko">Battle for Zendikar</h4></a>
           </div>
       <div id="two">
-    <a href="about.html"><h1>About</h1></a>
+    <a href="about.html"><h2 class="clicko">About</h2></a>
+          <a href="about.html"><img src="ytube.png" class="click"></a>
+            <a href="about.html"><h4 class="clicko">Youtube Channel</h4></a>
+          <a href="about.html"><h4 class="clicko">Creators</h4></a>
       </div>
      </body>
 </html>
