--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
           </div>
       <div id="two">
     <a href="about.html"><h2 class="clicko">About</h2></a>
-          <a href="about.html"><img src="ytube.png" class="click"></a>
+          <a href="about.html"><img src="ytube.png" class="click" style="margin-left: 330px;"></a>
             <a href="about.html"><h4 class="clicko">Youtube Channel</h4></a>
+                <a href="about.html"><img src="c.jpg" class="click" style="margin-left: 330px;"></a>
           <a href="about.html"><h4 class="clicko">Creators</h4></a>
       </div>
      </body>
