--- a/creators.html
+++ b/creators.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Boss: Decks 1</title>
+    <title>The Boss: About Creators</title>
     </head>
     <body>
     
