--- a/creators.html
+++ b/creators.html
@@ -2,8 +2,15 @@
 <html>
 <head>
     <title>The Boss: About Creators</title>
+    <link rel="indexsheet" href="index.css">
     </head>
     <body>
-    
+        <a href="lucas.html"><h3 class="names">Lucas</h3></a>
+    <a href="william.html"><h3 class="names">William</h3></a>
+          <a href="jason.html"><h3 class="names">Jason</h3></a>
+           <a href="joseph.html"><h3 class="names">Joseph</h3></a>
+        <a href="anuj.html"><h3 class="names">Anuj</h3></a>
+           <a href="angad.html"><h3 class="names">Angad</h3></a>
+           <a href="keith.html"><h3 class="names">Keith</h3></a>
     </body>
 </html>
