--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
                 <a href="about.html"><img src="c.jpg" class="click" style="margin-left: 330px;"></a>
           <a href="about.html"><h4 class="clicko">Creators</h4></a>
       </div>
+      <div id="three">
+          <a href="blog.html"><h2 class="clicko">Blog</h2></a>
+          <a href="blog.html"><h4 class="clicko">Apocalypse</h4></a>
+          <a href="blog.html"><h4 class="clicko"></h4></a>
+      </div>
      </body>
 </html>
