--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
       </div>
       <div id="three">
           <a href="blog.html"><h2 class="clicko">Blog</h2></a>
+         <a href="blog.html"> <img src="a.jpg" class="click"></a>
           <a href="blog.html"><h4 class="clicko">Apocalypse</h4></a>
-          <a href="blog.html"><h4 class="clicko"></h4></a>
+            <a href="blog.html"> <img src="cool.jpg" class="click" style="margin-left: 50px;"></a>
+          <a href="blog.html"><h4 class="clicko">Cool Stuff</h4></a>
+            <a href="blog.html"> <img src="dump.jpg" class="click" style="margin-left: 60px;"></a>
+             <a href="blog.html"><h4 class="clicko">Dumb Stuff</h4></a>
+            <a href="blog.html"> <img src="Spy (1).png" style="margin-left: 80px;" class="click"></a>
+          <a href="blog.html"><h4 class="clicko">The Boss Club</h4></a>
       </div>
      </body>
 </html>
