--- a/index.html
+++ b/index.html
@@ -45,5 +45,15 @@
             <a href="blog.html"> <img src="Spy (1).png" style="margin-left: 80px;" class="click"></a>
           <a href="blog.html"><h4 class="clicko">The Boss Club</h4></a>
       </div>
+      <div class="four">
+          HEEHEE
+      </div>
+          <div class="five">
+          
+      </div>
+      HEEHEE
+          <div class="four">
+          
+      </div>
      </body>
 </html>
