first change on new laptop

--- a/about.html
+++ b/about.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>THe Boss: About</title>
     </head>
     <body>
     <a href="youtube.html">Youtube</a>
         <a href="creators.html">The Creators</a>
+        <div class="button">      
+            <a href="index.html" style="bottom: 100px;"><h5>Back to Home</h5></a>
+            </div>
+  
     </body>
 </html>
