--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div id="header">
       <img src="Spy (1).png" />
       <h1 id="name">
-        The Boss 
+        The Boss (under construction)
       </h1>
-      <h5 id="button">
+      <h5 class="button">
       <a href="#header">Back to Top</a>
       </h5>
     </div>
