--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </h5>
     </div>
       <div id="one">
-         <a href="Magic the Gathering.html"> <h2  class="clicko">Magic the Gathering</h2></a>
+         <a href="Magic the Gathering.html"> <h2  class="clicko">Tagic the Gathering</h2></a>
           <a href="Magic the Gathering.html">
               <img src="it.jpg" class="click"> </a>
            <a href="Magic the Gathering.html"><h4 class="clicko">Eldritch Moon</h4></a>
